[package]
name = "nctl"
version = "0.3.1"
authors = ["Éric BURGHARD <eric.burghard@solarsis.ao>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
ureq = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# xml-rs = "0.8"