[package]
name = "nctl"
version = "0.5.0"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
reqwest = { version = "0.11.13", features = ["rustls", "blocking"] }
quick-xml = { version = "0.26.0", features = ["serialize"] }
chrono = { version="0.4.23", features=["serde"] }
regex = "1.7.0"
